2017-09-19  Markus Gans  <guru.mail@muenster.de>
	* FString has now got its own streaming functionality for 
	  inbound and outbound type conversion
	* Added stream and assignment operator support for FLabel

2017-09-19  Markus Gans  <guru.mail@muenster.de>
	* The command line help text is now available in all applications

2017-09-17  Markus Gans  <guru.mail@muenster.de>
	* FObject has received the iterator child access methods 
	  begin() and end()
	* All include files were moved to a separate directory
	* std::scanf used now fields with width limit

2017-09-15  Markus Gans  <guru.mail@muenster.de>
	* Fix byte access in data type char_data

2017-09-11  Markus Gans  <guru.mail@muenster.de>
	* Some code improvements 
	* Fix handling of negative numbers in FString::toLong()

2017-09-09  Markus Gans  <guru.mail@muenster.de>
	* Wrong UTF-8 string length fixed when attaching to FString

2017-09-07  Markus Gans  <guru.mail@muenster.de>
	* Type definition exported into a separate header file

2017-09-03  Markus Gans  <guru.mail@muenster.de>
	* Fixes wrong maximum line width in FListView

2017-08-26  Markus Gans  <guru.mail@muenster.de>
	* Improve code readability through spaces between 
	  the operands and the operators

2017-08-24  Markus Gans  <guru.mail@muenster.de>
	* Rename fapp.{cpp,h} to fapplication.{cpp,h}

2017-08-20  Markus Gans  <guru.mail@muenster.de>
	* Screen characters got a union structure for a faster 
	  attribute compare operation

2017-08-11  Markus Gans  <guru.mail@muenster.de>
	* Some code changes for GCC 7
	* Implementation of a copy constructor for FPoint and FRect

2017-08-06  Markus Gans  <guru.mail@muenster.de>
	* Fix GNU Screen support for vte/gnome-terminals
	* Advanced streaming functionality for FTermBuffer 
	  and FVTerm::print()

2017-07-31  Markus Gans  <guru.mail@muenster.de>
	* New methods to retrieve or modify FListViewItem text or 
	  a FListView column text for a specific column

2017-07-28  Markus Gans  <guru.mail@muenster.de>