@@ -76,14 +76,14 @@ Treeview::Treeview (FWidget* parent)
 
   for (int i = 0; i <= lastItem; i++)
   {
-    std::vector<FString> line (&continent[i][0], &continent[i][0] + 3);
+    FStringList line (&continent[i][0], &continent[i][0] + 3);
     listView->insert (line);
   }
 
 
   FObjectIterator iter_africa = listView->beginOfList();
   std::string egypt[3] = { "Egypt", "94,666,000", "87" };
-  std::vector<FString> egypt_line (&egypt[0], &egypt[0] + 3);
+  FStringList egypt_line (&egypt[0], &egypt[0] + 3);
   //FObjectIterator iter_africa = listView->insert (egypt_line);
   listView->insert (egypt_line, iter_africa);
 
